fix(banner-block): banner not showing town name in some cases

--- a/src/components/banner-block/banner-block.css
+++ b/src/components/banner-block/banner-block.css
@@ -50,3 +50,7 @@ html {
   text-decoration: none;
   color: white;
 }
+
+field-block {
+  display: inline-block;
+}
